--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <tr>
             <td><input type="button" onclick="appendNumber(0)" value="0"></td>
             <td><input type="button" onclick="calculate()" value="="></td>
-            <td><input type="button" onclick="point()" value="."></td>
+            <td><input type="button" onclick="appendNumber('.')" value="."></td>
             <td><input type="button" onclick="add()" value="+"></td>
         </tr>
     </table>
